--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+        </dependency>
         <!-- spring-boot begin -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -35,6 +40,18 @@
             <scope>test</scope>
         </dependency>
         <!-- spring-boot end  -->
+
+        <dependency>
+            <groupId>com.aliyun.openservices</groupId>
+            <artifactId>ons-client</artifactId>
+            <version>1.8.4.Final</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
 
         <!-- tag::joda[] -->
         <dependency>
